<resources>
    <string name="app_name">TimeManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beginning">Начало</string>
    <string name="ending">Конец</string>
    <string name="date">Дата</string>
    <string name="money">Оплата</string>
    <string name="count">Рассчитать</string>
    <string name="sum">Ваша зарплата за этот срок:</string>
    <string name="add">Добавить</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="enter_price">Введите оплату за час в ₽:</string>
    <string name="alertGuestNameIsEmpty">Заполните поле</string>
    <string name="warningSelectOnlyOne">Выберите только одну запись для редактирования</string>
    <string name="warningAddFailed">Не удалось добавить запись в базу данных</string>
    <string name="warningDeleteFailed">Не удалось удалить запись из базы данных</string>
    <string name="warningEditFailed">Не удалось отредактировать запись в базе данных</string>
</resources>
