<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="24dp">

        <LinearLayout
            android:id="@+id/begin_add_layout"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/start_clock_imgbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_alarm_on_black_48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginning"
                    android:textColor="@color/importantTextColor" />

                <TextView
                    android:id="@+id/start_dialog_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:00"
                    android:textColor="@color/blackColor"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_add_layout"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/end_clock_imgbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_alarm_on_black_48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ending"
                    android:textColor="@color/importantTextColor" />

                <TextView
                    android:id="@+id/end_dialog_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13:00"
                    android:textColor="@color/blackColor"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_add_layout"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/calendar_imgbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_today_black_48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/importantTextColor" />

                <TextView
                    android:id="@+id/start_date_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01.01.17"
                    android:textColor="@color/blackColor"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:text="@string/add" />
</FrameLayout>