<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingLeft="16dp">


        <LinearLayout
            android:id="@+id/begin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/start_date_fragment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_today_black_48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginning"
                    android:textColor="@color/importantTextColor" />

                <TextView
                    android:id="@+id/start_date_fragment_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01.01.17"
                    android:textColor="@color/blackColor"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/end_date_fragment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_today_black_48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ending"
                    android:textColor="@color/importantTextColor" />

                <TextView
                    android:id="@+id/end_date_fragment_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10.02.17"
                    android:textColor="@color/blackColor"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/count_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/price_fragment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_attach_money_black_48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money"
                    android:textColor="@color/importantTextColor" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/money_fragment_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="150"
                        android:textColor="@color/blackColor"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:text="₽"
                        android:textColor="@color/blackColor"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/sum"
                android:textAllCaps="true"
                android:textColor="@color/importantTextColor" />

            <TextView
                android:id="@+id/result_fragment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="0"
                android:textAllCaps="true"
                android:textColor="@color/blackColor"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="₽"
                android:textColor="@color/blackColor"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/count_fragment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:text="@string/count" />
</FrameLayout>